--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="project-list">
     <h2>📁 Projects</h2>
     <ul>
-      <li><a href="https://github.com/Escxped/cit281-p1" target="_blank">Project 1 – Intro to JavaScript</a></li>
+      <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project 1 – JavaScript Basics</a></li>
       <li><a href="https://github.com/Escxped/cit281-p2" target="_blank">Project 2 – CLI and Loops</a></li>
       <li><a href="https://github.com/Escxped/cit281-p3" target="_blank">Project 3 – Modular JS</a></li>
     </ul>
