Updated index.html with labs section

--- a/index.html
+++ b/index.html
@@ -26,9 +26,23 @@
       <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project 1 – JavaScript Basics</a></li>
       <li><a href="https://github.com/Escxped/cit281-p2" target="_blank">Project 2 – CLI and Loops</a></li>
       <li><a href="https://github.com/Escxped/cit281-p3" target="_blank">Project 3 – Modular JS</a></li>
+      <li><a href="https://github.com/Escxped/cit281-p4" target="_blank">Project 4 – Node.js REST API </a></li>
     </ul>
   </div>
-
+  <div class="Lab-list">
+    <h2>🥼 Labs</h2>
+    <ul>
+      <li><a href="https://escxped.github.io/cit281-lab1/" target="_blank">Lab 1 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab2/" target="_blank">Lab 2 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab3/" target="_blank">Lab 3 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab4/" target="_blank">Lab 4 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab5/" target="_blank">Lab 5 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab6/" target="_blank">Lab 6 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab7/" target="_blank">Lab 7 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab8/" target="_blank">Lab 8 </a></li>
+      <li><a href="https://escxped.github.io/cit281-lab9/" target="_blank">Lab 9 </a></li> 
+    </ul>
+  </div>
   <p>More projects coming soon!</p>
 </body>
 </html>
