Updated index.html with saying Which Class it was for

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <img class="banner" src="https://source.unsplash.com/1200x300/?technology,code" alt="Banner" />
 
   <div class="project-list">
-    <h2>📁 Projects</h2>
+    <h2>📁 Projects - 281 </h2>
     <ul>
       <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project 1 – JavaScript Basics</a></li>
       <li><a href="https://github.com/Escxped/cit281-p2" target="_blank">Project 2 – CLI and Loops</a></li>
@@ -30,7 +30,7 @@
     </ul>
   </div>
   <div class="Lab-list">
-    <h2>🥼 Labs</h2>
+    <h2>🥼 Labs - 281 </h2>
     <ul>
       <li><a href="https://escxped.github.io/cit281-lab1/" target="_blank">Lab 1 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab2/" target="_blank">Lab 2 </a></li>
