--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     .project-list li { margin-bottom: 0.75rem; }
     img.banner { width: 100%; max-height: 250px; object-fit: cover; border-radius: 8px; }
   </style>
+  <style>
+  body {
+    font-family: Arial, sans-serif;
+    padding: 2rem;
+    background: linear-gradient(90deg, rgba(42, 155, 132, 1) 0%, rgba(87, 108, 199, 1) 51%, rgba(83, 237, 206, 1) 100%);
+    color: #fff;
+  }
+  h1 { color: #ffe066; }
+  a { color: #fff; text-decoration: underline; }
+</style>
 </head>
 <body>
   <h1>Welcome to My CIT Minor Portfolio</h1>
