--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <h1>Welcome to My CIT Minor Portfolio</h1>
   <p>This site showcases my labs and projects for CIT 281 and beyond.</p>
-
+<p><a href="aboutme.html" style="display:inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background-color: #007acc; color: #fff; border-radius: 5px; text-decoration: none;">🙋‍♂️About me</a></p>
   <div class="project-list">
     <h2>📁 Projects - 281 </h2>
     <ul>
