--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
   <div class="project-list">
     <h2>📁 Projects - 281 </h2>
     <ul>
-      <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project 1 – JavaScript Basics</a></li>
-      <li><a href="https://github.com/Escxped/cit281-p2" target="_blank">Project 2 – CLI and Loops</a></li>
-      <li><a href="https://github.com/Escxped/cit281-p3" target="_blank">Project 3 – Modular JS</a></li>
-      <li><a href="https://github.com/Escxped/cit281-p4" target="_blank">Project 4 – Node.js REST API </a></li>
+      <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project  1 – JavaScript Basics</a></li>
+      <li><a href="https://github.com/Escxped/cit281-p2/" target="_blank">Project 2 – CLI and Loops</a></li>
+      <li><a href="https://github.com/Escxped/cit281-p3/" target="_blank">Project 3 – Modular JS</a></li>
+      <li><a href="https://github.com/Escxped/cit281-p4/" target="_blank">Project 4 – Node.js REST API </a></li>
+      <li><a href="https://github.com/Escxped/cit281-p5/" target="_blank">Project 5 –  </a></li>
+      <li><a href="https://github.com/Escxped/cit281-p6/" target="_blank">Project 6 –  </a></li>
     </ul>
   </div>
   <div class="Lab-list">
