--- a/aboutme.html
+++ b/aboutme.html
@@ -46,11 +46,11 @@
 <body>
   <div class="content">
     <h1>👋 About Me</h1>
-    <p>Hi! I'm a student in the CIT Minor program at the University of Oregon. I enjoy learning how technology works behind the scenes and building cool things with code.</p>
+    <p>Hello! I'm a student in the CIT Minor program at the University of Oregon. My Major is Business Administration. I enjoy learning how technology works behind the scenes and building cool things with code.</p>
 
     <p>My favorite areas so far include JavaScript, GitHub workflows, and making responsive web pages with HTML and CSS. I'm especially interested in full-stack development and cybersecurity.</p>
 
-    <p>Outside of coding, I enjoy gaming, art, music, and exploring how software impacts daily life. I’m excited to continue growing my skills and building a professional portfolio that reflects my journey through CIT 281 and beyond.</p>
+    <p>Outside of coding, I enjoy gaming, hanging out with my friends, music, and exploring how software impacts daily life. I'm excited to continue growing my skills and building a professional portfolio that reflects my journey through CIT 281 and beyond.</p>
 
     <a href="index.html" class="back-link">← Back to Portfolio</a>
   </div>
