--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>📁 Projects - 281 </h2>
     <ul>
       <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project  1 – JavaScript Basics</a></li>
-      <p>DONT HAVE PROJECT 2</p>
+      <li><p>DONT HAVE PROJECT 2</p></li>
       <li><a href="https://github.com/Escxped/cit281-p3/" target="_blank">Project 3 – Modular JS</a></li>
       <li><a href="https://github.com/Escxped/cit281-p4/" target="_blank">Project 4 – Node.js REST API </a></li>
       <li><a href="https://github.com/Escxped/cit281-p5/" target="_blank">Project 5 –  </a></li>
@@ -43,7 +43,7 @@
     <h2>🥼 Labs - 281 </h2>
     <ul>
       <li><a href="https://escxped.github.io/cit281-lab1/" target="_blank">Lab 1 </a></li>
-      <p>DONT HAVE LAB 2 </p>
+      <li><p>DONT HAVE LAB 2 </p></li>
       <li><a href="https://escxped.github.io/cit281-lab2/" target="_blank">Lab 2 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab3/" target="_blank">Lab 3 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab4/" target="_blank">Lab 4 </a></li>
