--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <ul>
       <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project  1 – JavaScript Basics</a></li>
       <li><p>DONT HAVE PROJECT 2</p></li>
-      <li><a href="https://github.com/Escxped/cit281-p3/" target="_blank">Project 3 – Modular JS</a></li>
-      <li><a href="https://github.com/Escxped/cit281-p4/" target="_blank">Project 4 – Node.js REST API </a></li>
-      <li><a href="https://github.com/Escxped/cit281-p5/" target="_blank">Project 5 –  </a></li>
-      <li><a href="https://github.com/Escxped/cit281-p6/" target="_blank">Project 6 –  </a></li>
+      <li><a href="https://escxped.github.io/cit281-p3/" target="_blank">Project 3 – Modular JS</a></li>
+      <li><a href="https://escxped.github.io/cit281-p4/" target="_blank">Project 4 – Node.js REST API </a></li>
+      <li><a href="https://escxped.github.io/cit281-p5/" target="_blank">Project 5 –  </a></li>
+      <li><a href="https://escxped.github.io/cit281-p6/" target="_blank">Project 6 –  </a></li>
     </ul>
   </div>
   <div class="Lab-list">
