--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>🥼 Labs - 281 </h2>
     <ul>
       <li><a href="https://escxped.github.io/cit281-lab1/" target="_blank">Lab 1 </a></li>
-      <li><p>DONT HAVE LAB 2 </p></li>
+      <li><a href="https://escxped.github.io/cit281-lab2/" target="_blank">Lab 2 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab2/" target="_blank">Lab 2 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab3/" target="_blank">Lab 3 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab4/" target="_blank">Lab 4 </a></li>
