--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li><p>DONT HAVE PROJECT 2</p></li>
       <li><a href="https://escxped.github.io/cit281-p3/project-info.html" target="_blank">Project 3 – Modular JS</a></li>
       <li><a href="https://escxped.github.io/cit281-p4/" target="_blank">Project 4 – Node.js REST API </a></li>
-      <li><a href="https://escxped.github.io/cit281-p5/" target="_blank">Project 5 –  </a></li>
+      <li><a href="https://escxped.github.io/cit281-p5/" target="_blank">Project 5 – Blackjack with Node.js </a></li>
       <li><a href="https://escxped.github.io/cit281-p6/" target="_blank">Project 6 –  </a></li>
     </ul>
   </div>
