--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <li><a href="https://escxped.github.io/cit281-lab6/" target="_blank">Lab 6 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab7/" target="_blank">Lab 7 </a></li>
       <li><a href="https://escxped.github.io/cit281-lab8/" target="_blank">Lab 8 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab9/" target="_blank">Lab 9 </a></li> 
+      <li><a href="https://escxped.github.io/cit281-lab9/lab-info.html" target="_blank">Lab 9 </a></li> 
     </ul>
   </div>
   <p>More projects coming soon!</p>
