--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
 <body>
   <h1>Welcome to My CIT Minor Portfolio</h1>
   <p>This site showcases my labs and projects for CIT 281 and beyond.</p>
-<p><a href="aboutme.html" style="display:inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background-color: #007acc; color: #fff; border-radius: 5px; text-decoration: none;">🙋‍♂️About me</a></p>
+  <p><a href="javascript:void(0);" onclick="window.open('/aboutme')" style="display:inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background-color: #007acc; color: #fff; border-radius: 5px; text-decoration: none;">🙋‍♂️About me</a></p>
   <div class="project-list">
     <h2>📁 Projects - 281 </h2>
     <ul>
-      <li><a href="https://escxped.github.io/cit281-p1/" target="_blank">Project  1 – JavaScript Basics</a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-p1/')">Project  1 – JavaScript Basics</a></li>
       <li><p>DONT HAVE PROJECT 2</p></li>
-      <li><a href="https://escxped.github.io/cit281-p3/project-info.html" target="_blank">Project 3 – Modular JS</a></li>
-      <li><a href="https://escxped.github.io/cit281-p4/" target="_blank">Project 4 – Node.js REST API </a></li>
-      <li><a href="https://escxped.github.io/cit281-p5/" target="_blank">Project 5 – Blackjack with Node.js </a></li>
-      <li><a href="https://escxped.github.io/cit281-p6/" target="_blank">Project 6 – Full Stack API App </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-p3/project-info')">Project 3 – Modular JS</a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-p4/')">Project 4 – Node.js REST API </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-p5/')">Project 5 – Blackjack with Node.js </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-p6/')">Project 6 – Full Stack API App </a></li>
     </ul>
   </div>
   <div class="Lab-list">
     <h2>🥼 Labs - 281 </h2>
     <ul>
-      <li><a href="https://escxped.github.io/cit281-lab1/" target="_blank">Lab 1 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab2/" target="_blank">Lab 2 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab3/" target="_blank">Lab 3 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab4/" target="_blank">Lab 4 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab5/" target="_blank">Lab 5 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab6/" target="_blank">Lab 6 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab7/" target="_blank">Lab 7 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab8/lab-info.html" target="_blank">Lab 8 </a></li>
-      <li><a href="https://escxped.github.io/cit281-lab9/lab-info.html" target="_blank">Lab 9 </a></li> 
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab1/')">Lab 1 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab2/')">Lab 2 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab3/')">Lab 3 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab4/')">Lab 4 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab5/')">Lab 5 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab6/')">Lab 6 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab7/')">Lab 7 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab8/lab-info')">Lab 8 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab9/lab-info')">Lab 9 </a></li> 
     </ul>
   </div>
   <p>More projects coming soon!</p>
