--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,7 @@
 
     <p>Outside of coding, I enjoy gaming, hanging out with my friends, music, and exploring how software impacts daily life. I'm excited to continue growing my skills and building a professional portfolio that reflects my journey through CIT 281 and beyond.</p>
 
-    <a href="index.html" class="back-link">← Back to Portfolio</a>
+	<a href="javascript:void(0);" class="back-link" onclick="(window.opener && !window.opener.closed) ? window.close() : (window.location.href = '/')" rel="">← Back to Portfolio</a>
   </div>
 </body>
 </html>
