--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-p4/')">Project 4 – Node.js REST API </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-p5/')">Project 5 – Blackjack with Node.js </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-p6/')">Project 6 – Full Stack API App </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-p7/')">Project 7 – Final Project</a></li>
     </ul>
   </div>
   <div class="Lab-list">
