--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <h2>🥼 Labs - 281 </h2>
     <ul>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab1/')">Lab 1 </a></li>
-      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab2/')">Lab 2 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab2/')">Lab 2 ( Dont have )</a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab3/')">Lab 3 </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab4/')">Lab 4 </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab5/')">Lab 5 </a></li>
-      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab6/')">Lab 6 </a></li>
+      <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab6/')">Lab 6 ( Dont have ) </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab7/')">Lab 7 </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab8/lab-info')">Lab 8 </a></li>
       <li><a href="javascript:void(0);" onclick="window.open('/cit281-lab9/lab-info')">Lab 9 </a></li> 
